<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.activity.LoginActivity">

    <LinearLayout
        android:id="@+id/containerHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_header_login"
        android:orientation="vertical"
        android:paddingVertical="@dimen/dimen_32dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/AuthifyText.SemiBold.50"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/colorWhite" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/AuthifyText.Regular.20"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dimen_24dp"
            android:text="@string/label_app_name_description"
            android:textColor="@color/colorWhite" />
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        style="@style/AuthifyTextInputLayout"
        android:layout_marginHorizontal="@dimen/dimen_24dp"
        android:layout_marginTop="@dimen/dimen_40dp"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/containerHeader">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtEmail"
            style="@style/AuthifyEditText"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="@dimen/dimen_8dp"
            android:drawableTint="@color/colorTextHint"
            android:hint="@string/hint_input_email"
            android:inputType="textEmailAddress"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        style="@style/AuthifyTextInputLayout"
        android:layout_marginHorizontal="@dimen/dimen_24dp"
        android:layout_marginTop="@dimen/dimen_40dp"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtPassword"
            style="@style/AuthifyEditText"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="@dimen/dimen_8dp"
            android:drawableTint="@color/colorTextHint"
            android:hint="@string/hint_input_password"
            android:inputType="textPassword"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        style="@style/AuthifyButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_72dp"
        android:enabled="false"
        android:layout_marginHorizontal="@dimen/dimen_40dp"
        app:layout_constraintTop_toTopOf="@id/guideline"
        app:layout_constraintBottom_toBottomOf="@id/guideline"
        android:text="@string/action_login" />
</androidx.constraintlayout.widget.ConstraintLayout>